--- a/index.html
+++ b/index.html
@@ -2,13 +2,47 @@
 <html lang="de">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="robots" content="noindex, nofollow">
-        <meta name="viewport" content="width=device-width">
+        <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin und Expertin für eine urbane und empathische Erinnerungspraxis">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kulturwissenschaftlerin Nadine Seidu</title>
         <link rel="stylesheet" href="/index.css" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
     </head>
     <body>
-        <h1>Kulturwissenschaftlerin Nadine Seidu</h1>
+        <h1 class="sr-only">Kulturwissenschaftlerin Nadine Seidu</h1>
+        <main class="m-auto">
+            <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 mt-16 border">
+                <div class="pt-10 pr-10 pb-20 pl-20">
+                    <h2 class="font-black text-5xl mb-4">Nadine Seidu</h2>
+                    <p class="mb-10 uppercase">Kulturwissenschaftlerin und Expertin für Erinnerungskulturen</p>
+                    <strong class="font-black">Schwerpunkte</strong>
+                    <p class="mb-4">Urbane und empathische Erinnerungspraxis | Empowerment von Graswurzelinitiativen und Netzwerkarbeit | Entwicklung neuer Formen des Erinnerns | Kulturverwaltung, Museen und Archive</p>
+                    <strong class="font-black">Biografische Stationen (Auswahl)</strong>
+                    <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Landeshauptstadt Stuttgart | Stellvertretende Leitung des Leitungstabs, Landesarchiv Baden-Württemberg | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
+                    <ul class="flex -mx-2.5">
+                        <li>
+                            <a class="inline-flex items-center justify-center w-14 h-14 p-2.5" href="mailto:kontakt@nadineseidu.info">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+                                    <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 14H4V8l8 5 8-5zm-8-7L4 6h16z"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="inline-flex items-center justify-center w-14 h-14 p-3" href="https://www.linkedin.com/in/nadine-seidu/" target="_blank">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 34 34" aria-hidden="true">
+                                    <path d="M34 2.5v29a2.5 2.5 0 0 1-2.5 2.5h-29A2.5 2.5 0 0 1 0 31.5v-29A2.5 2.5 0 0 1 2.5 0h29A2.5 2.5 0 0 1 34 2.5ZM10 13H5v16h5Zm.45-5.5a2.88 2.88 0 0 0-2.86-2.9H7.5a2.9 2.9 0 0 0 0 5.8 2.88 2.88 0 0 0 2.95-2.81ZM29 19.28c0-4.81-3.06-6.68-6.1-6.68a5.7 5.7 0 0 0-5.06 2.58h-.14V13H13v16h5v-8.51a3.32 3.32 0 0 1 3-3.58h.19c1.59 0 2.77 1 2.77 3.52V29h5Z"/>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="md:-mt-16 md:mr-16 flex justify-center md:justify-end">
+                    <img src="/img/1724333521397.jpg" class="" alt="1536w" />
+                </div>
+            </div>
+        </main>
     </body>
 </html>
