Add trailing . to description

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin und Expertin für eine urbane und empathische Erinnerungspraxis">
+        <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin und Expertin für eine urbane und empathische Erinnerungspraxis.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kulturwissenschaftlerin Nadine Seidu</title>
         <link rel="stylesheet" href="/index.css" />
@@ -40,7 +40,7 @@
                     </ul>
                 </div>
                 <div class="md:-mt-16 md:mr-16 flex justify-center md:justify-end">
-                    <img src="/img/1724333521397.jpg" class="" alt="1536w" />
+                    <img src="/img/1724333521397.jpg" />
                 </div>
             </div>
         </main>
