--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <strong class="font-black">Schwerpunkte</strong>
                     <p class="mb-4">Urbane und empathische Erinnerungspraxis | Empowerment von Graswurzelinitiativen und Netzwerkarbeit | Entwicklung neuer Formen des Erinnerns | Kulturverwaltung, Museen und Archive</p>
                     <strong class="font-black">Biografische Stationen (Auswahl)</strong>
-                    <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Landeshauptstadt Stuttgart | Stellvertretende Leitung des Leitungstabs, Landesarchiv Baden-Württemberg | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
+                    <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Landeshauptstadt Stuttgart | Stellvertretende Leitung des Leitungsstabs, Landesarchiv Baden-Württemberg | Stabsstelle des Rektors, Universität Stuttgart | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
                     <ul class="flex -mx-2.5">
                         <li>
                             <a class="inline-flex items-center justify-center w-14 h-14 p-2.5" href="mailto:kontakt@nadineseidu.info">
