Add labels to social links and email

--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
                     <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Landeshauptstadt Stuttgart | Stellvertretende Leitung des Leitungsstabs, Landesarchiv Baden-Württemberg | Stabsstelle des Rektors, Universität Stuttgart | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
                     <ul class="flex -mx-2.5">
                         <li>
-                            <a class="inline-flex items-center justify-center w-14 h-14 p-2.5" href="mailto:kontakt@nadineseidu.info">
+                            <a class="inline-flex items-center justify-center w-14 h-14 p-2.5" aria-label="E-Mail schreiben" href="mailto:kontakt@nadineseidu.info">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
                                     <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 14H4V8l8 5 8-5zm-8-7L4 6h16z"/>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a class="inline-flex items-center justify-center w-14 h-14 p-3" href="https://www.linkedin.com/in/nadine-seidu/" target="_blank">
+                            <a class="inline-flex items-center justify-center w-14 h-14 p-3" aria-label="Social Link zu LinkedIn" href="https://www.linkedin.com/in/nadine-seidu/" target="_blank">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 34 34" aria-hidden="true">
                                     <path d="M34 2.5v29a2.5 2.5 0 0 1-2.5 2.5h-29A2.5 2.5 0 0 1 0 31.5v-29A2.5 2.5 0 0 1 2.5 0h29A2.5 2.5 0 0 1 34 2.5ZM10 13H5v16h5Zm.45-5.5a2.88 2.88 0 0 0-2.86-2.9H7.5a2.9 2.9 0 0 0 0 5.8 2.88 2.88 0 0 0 2.95-2.81ZM29 19.28c0-4.81-3.06-6.68-6.1-6.68a5.7 5.7 0 0 0-5.06 2.58h-.14V13H13v16h5v-8.51a3.32 3.32 0 0 1 3-3.58h.19c1.59 0 2.77 1 2.77 3.52V29h5Z"/>
                                 </svg>
                             </a>
                         </li>
                         <li>
-                            <a class="inline-flex items-center justify-center w-14 h-14 p-3" href="https://x.com/NadineSeidu" target="_blank">
+                            <a class="inline-flex items-center justify-center w-14 h-14 p-3" aria-label="Social Link zu X (Twitter)" href="https://x.com/NadineSeidu" target="_blank">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
                                     <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
                                 </svg>
