Provide alt text for main image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </ul>
                 </div>
                 <div class="md:-mt-16 md:mr-16 flex justify-center md:justify-end">
-                    <img src="/img/1724333521397.jpg" />
+                    <img src="/img/1724333521397.jpg" alt="Nadine Seidu im Business-Outfit" />
                 </div>
             </div>
         </main>
