Add favicon.ico link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="icon" href="/favicon.ico">
         <link rel="manifest" href="/site.webmanifest">
         <style>@font-face{font-family:'Noto Serif JP';font-style:normal;font-weight:400;font-display:swap;src:url(//www.nadineseidu.info/fonts/noto-serif-jp-v29-latin-regular.woff2) format(woff2)}@font-face{font-family:'Noto Serif JP 900';font-style:normal;font-weight:900;font-display:swap;src:url(//www.nadineseidu.info/fonts/noto-serif-jp-v29-latin-900.woff2) format(woff2)}</style>
     </head>
