--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin und Expertin für eine urbane und empathische Erinnerungspraxis.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="og:title" content="Nadine Seidu">
         <title>Kulturwissenschaftlerin Nadine Seidu</title>
         <link rel="stylesheet" href="/index.css" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
