Provide WebP Image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
                     </ul>
                 </div>
                 <div class="md:-mt-16 md:mr-16 flex justify-center md:justify-end">
-                    <img src="/img/1724333521397.jpg" alt="Nadine Seidu im Business-Outfit" />
+                    <picture>
+                        <source type="image/webp" srcset="/img/1724333521397.webp">
+                        <source type="image/jpeg" srcset="/img/1724333521397.jpg">
+                        <img src="/img/1724333521397.jpg" alt="Nadine Seidu im Business-Outfit">
+                    </picture>
                 </div>
             </div>
         </main>
