--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 </div>
                 <div class="md:-mt-16 md:mr-16 flex justify-center md:justify-end">
                     <picture>
-                        <source type="image/webp" srcset="/img/1724333521397.webp">
-                        <source type="image/jpeg" srcset="/img/1724333521397.jpg">
-                        <img src="/img/1724333521397.jpg" alt="Nadine Seidu im Business-Outfit">
+                        <source type="image/webp" srcset="/img/1724333521397-1200w.webp">
+                        <source type="image/jpeg" srcset="/img/1724333521397-1200w.jpg">
+                        <img src="/img/1724333521397-1200w.jpg" alt="Nadine Seidu im Business-Outfit">
                     </picture>
                 </div>
             </div>
