Set explicit width and height

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <picture>
                         <source type="image/webp" srcset="/img/1724333521397-1200w.webp">
                         <source type="image/jpeg" srcset="/img/1724333521397-1200w.jpg">
-                        <img src="/img/1724333521397-1200w.jpg" alt="Nadine Seidu im Business-Outfit">
+                        <img src="/img/1724333521397-1200w.jpg" width="1200" height="1800" alt="Nadine Seidu im Business-Outfit">
                     </picture>
                 </div>
             </div>
