Add Open Graph image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin und Expertin für eine urbane und empathische Erinnerungspraxis.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg">
         <meta name="og:title" content="Nadine Seidu">
         <title>Kulturwissenschaftlerin Nadine Seidu</title>
         <link rel="stylesheet" href="/index.css" />
