Simplify mobile version

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <body>
         <h1 class="sr-only">Kulturwissenschaftlerin Nadine Seidu</h1>
         <main class="m-auto">
-            <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 mt-16 border">
-                <div class="pt-10 pr-10 pb-20 pl-20">
+            <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 mt-16 md:border">
+                <div class="p-10 md:pb-20 md:pl-20">
                     <h2 class="font-black text-5xl mb-4">Nadine Seidu</h2>
                     <p class="mb-10 uppercase">Kulturwissenschaftlerin und Expertin für Erinnerungskulturen</p>
                     <strong class="font-black">Schwerpunkte</strong>
