--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 </div>
                 <div class="md:-mt-16 md:mr-16 flex justify-center md:justify-end">
                     <picture>
+                        <source type="image/avif" srcset="/img/1724333521397-1200w.avif">
                         <source type="image/webp" srcset="/img/1724333521397-1200w.webp">
                         <source type="image/jpeg" srcset="/img/1724333521397-1200w.jpg">
                         <img src="/img/1724333521397-1200w.jpg" width="1200" height="1800" alt="Nadine Seidu im Business-Outfit">
