--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                 </div>
                 <div class="md:-mt-16 md:mr-16 flex justify-center md:justify-end">
                     <picture>
-                        <source type="image/avif" srcset="/img/1724333521397-1000w.avif">
-                        <source type="image/webp" srcset="/img/1724333521397-1000w.webp">
-                        <source type="image/jpeg" srcset="/img/1724333521397-1000w.jpg">
-                        <img src="/img/1724333521397-1000w.jpg" width="1000" height="1500" alt="Nadine Seidu im Business-Outfit">
+                        <source type="image/avif" srcset="/img/1724333521397-900w.avif">
+                        <source type="image/webp" srcset="/img/1724333521397-900w.webp">
+                        <source type="image/jpeg" srcset="/img/1724333521397-900w.jpg">
+                        <img src="/img/1724333521397-900w.jpg" width="900" height="1350" alt="Nadine Seidu im Business-Outfit">
                     </picture>
                 </div>
             </div>
