Provide image widths: 1300px

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 </div>
                 <div class="md:-mt-16 md:mr-16 flex justify-center md:justify-end">
                     <picture>
-                        <source type="image/avif" srcset="/img/1724333521397-500w.avif 500w, /img/1724333521397-900w.avif 900w" sizes="(max-width: 767px) 100vw, 511px">
-                        <source type="image/webp" srcset="/img/1724333521397-500w.webp 500w, /img/1724333521397-900w.webp 900w" sizes="(max-width: 767px) 100vw, 511px">
-                        <img srcset="/img/1724333521397-500w.jpg 500w, /img/1724333521397-900w.jpg 900w" sizes="(max-width: 767px) 100vw, 511px" src="/img/1724333521397-1200w.jpg" width="1200" height="1800" alt="Nadine Seidu im Business-Outfit">
+                        <source type="image/avif" srcset="/img/1724333521397-500w.avif 500w, /img/1724333521397-900w.avif 900w, /img/1724333521397-1300w.avif 1300w" sizes="(max-width: 767px) 100vw, 511px">
+                        <source type="image/webp" srcset="/img/1724333521397-500w.webp 500w, /img/1724333521397-900w.webp 900w, /img/1724333521397-1300w.webp 1300w" sizes="(max-width: 767px) 100vw, 511px">
+                        <img srcset="/img/1724333521397-500w.jpg 500w, /img/1724333521397-900w.jpg 900w" sizes="(max-width: 767px) 100vw, 511px" src="/img/1724333521397-1300w.jpg" width="1300" height="1950" alt="Nadine Seidu im Business-Outfit">
                     </picture>
                 </div>
             </div>
