Replace Noto Serif JP font w/ Noto Serif from Google Fonts

--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="icon" href="/favicon.ico">
         <link rel="manifest" href="/site.webmanifest">
-        <style>@font-face{font-family:'Noto Serif JP';font-style:normal;font-weight:400;font-display:swap;src:url(//www.nadineseidu.info/fonts/noto-serif-jp-v29-latin-regular.woff2) format(woff2)}@font-face{font-family:'Noto Serif JP 900';font-style:normal;font-weight:900;font-display:swap;src:url(//www.nadineseidu.info/fonts/noto-serif-jp-v29-latin-900.woff2) format(woff2)}</style>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@300;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1 class="sr-only">Kulturwissenschaftlerin Nadine Seidu</h1>
         <main class="m-auto">
             <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 mt-16 md:border">
                 <div class="p-10 md:pb-20 md:pl-20">
-                    <h2 class="font-black text-5xl mb-4">Nadine Seidu</h2>
+                    <h2 class="font-bold text-5xl mb-4">Nadine Seidu</h2>
                     <p class="mb-10 uppercase">Kulturwissenschaftlerin und Expertin für Erinnerungskulturen</p>
-                    <strong class="font-black">Schwerpunkte</strong>
+                    <strong class="font-bold">Schwerpunkte</strong>
                     <p class="mb-4">Urbane und empathische Erinnerungspraxis | Empowerment von Graswurzelinitiativen und Netzwerkarbeit | Entwicklung neuer Formen des Erinnerns | Kulturverwaltung, Museen und Archive</p>
-                    <strong class="font-black">Biografische Stationen (Auswahl)</strong>
+                    <strong class="font-bold">Biografische Stationen (Auswahl)</strong>
                     <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Landeshauptstadt Stuttgart | Stellvertretende Leitung des Leitungsstabs, Landesarchiv Baden-Württemberg | Stabsstelle des Rektors, Universität Stuttgart | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
                     <ul class="flex -mx-2.5">
                         <li>
