--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
         <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg">
         <meta name="og:title" content="Nadine Seidu">
         <title>Kulturwissenschaftlerin Nadine Seidu</title>
-        <link rel="stylesheet" href="/index.css" />
+        <link rel="preload" href="index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+        <noscript><link rel="stylesheet" href="index.css"></noscript>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="icon" href="/favicon.ico">
         <link rel="manifest" href="/site.webmanifest">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@300;700&display=swap" rel="stylesheet">
+        <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@300;700&display=swap');</style>
     </head>
     <body>
         <h1 class="sr-only">Kulturwissenschaftlerin Nadine Seidu</h1>
