Use self-hosted fonts

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
         <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg">
         <meta name="og:title" content="Nadine Seidu">
         <title>Kulturwissenschaftlerin Nadine Seidu</title>
-        <link rel="preload" href="index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-        <noscript><link rel="stylesheet" href="index.css"></noscript>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="icon" href="/favicon.ico">
         <link rel="manifest" href="/site.webmanifest">
-        <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@300;700&display=swap');</style>
+        <link href="/index.css" rel="stylesheet">
+        <style>@font-face{font-display:swap;font-family:"Noto Serif Light";font-style:normal;font-weight:300;src:url(/fonts/noto-serif-v23-latin-300.woff2) format("woff2")}@font-face{font-display:swap;font-family:"Noto Serif Bold";font-style:normal;font-weight:700;src:url(/fonts/noto-serif-v23-latin-700.woff2) format("woff2")}</style>
     </head>
     <body>
         <h1 class="sr-only">Kulturwissenschaftlerin Nadine Seidu</h1>
