--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin und Expertin für eine urbane und empathische Erinnerungspraxis.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg">
-        <meta name="og:title" content="Nadine Seidu">
+        <meta name="og:site_name" content="Nadine Seidu">
         <title>Kulturwissenschaftlerin Nadine Seidu</title>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
