--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin und Expertin für eine urbane und empathische Erinnerungspraxis.">
+        <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin und Expertin für eine urbane Erinnerungspraxis und Stadtgedächtnis.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg">
         <meta name="og:site_name" content="Nadine Seidu">
