--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 mt-16 md:border">
                 <div class="p-10 md:pb-20 md:pl-20">
                     <h2 class="font-bold text-5xl mb-4">Nadine Seidu</h2>
-                    <p class="mb-10 uppercase">Kulturwissenschaftlerin und Expertin für Erinnerungskulturen</p>
+                    <p class="mb-10 uppercase">Kulturwissenschaftlerin und Expertin für Erinnerungskulturen und Stadtgedächtnis</p>
                     <strong class="font-bold">Schwerpunkte</strong>
-                    <p class="mb-4">Urbane und empathische Erinnerungspraxis | Empowerment von Graswurzelinitiativen und Netzwerkarbeit | Entwicklung neuer Formen des Erinnerns | Kulturverwaltung, Museen und Archive</p>
+                    <p class="mb-4">Urbane Erinnerungspraxis und Stadtgedächtnis | Empowerment von Graswurzelinitiativen und Netzwerkarbeit | Entwicklung neuer Formen des Erinnerns | Kulturverwaltung, Museen und Archive</p>
                     <strong class="font-bold">Biografische Stationen (Auswahl)</strong>
                     <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Landeshauptstadt Stuttgart | Stellvertretende Leitung des Leitungsstabs, Landesarchiv Baden-Württemberg | Stabsstelle des Rektors, Universität Stuttgart | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
                     <ul class="flex -mx-2.5">
