--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
         <link rel="manifest" href="/site.webmanifest">
         <link href="/index.css" rel="stylesheet">
         <style>@font-face{font-display:swap;font-family:"Noto Serif Light";font-style:normal;font-weight:300;src:url(/fonts/noto-serif-v23-latin-300.woff2) format("woff2")}@font-face{font-display:swap;font-family:"Noto Serif Bold";font-style:normal;font-weight:700;src:url(/fonts/noto-serif-v23-latin-700.woff2) format("woff2")}</style>
+        <script type="application/ld+json">
+            {
+              "@context": "http://schema.org",
+              "@type": "Person",
+              "name": "Nadine Seidu",
+              "url": "https://www.nadineseidu.info",
+              "sameAs": [
+                "https://www.linkedin.com/in/nadine-seidu/",
+                "https://x.com/NadineSeidu"
+              ],
+              "jobTitle": "Deine Berufsbezeichnung"
+            }
+        </script>
     </head>
     <body>
         <h1 class="sr-only">Kulturwissenschaftlerin Nadine Seidu</h1>
