Correct jobTitle field in JSON-LD

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 "https://www.linkedin.com/in/nadine-seidu/",
                 "https://x.com/NadineSeidu"
               ],
-              "jobTitle": "Deine Berufsbezeichnung"
+              "jobTitle": "Kulturwissenschaftlerin"
             }
         </script>
     </head>
