Provide image field in JSON-LD

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               "@type": "Person",
               "name": "Nadine Seidu",
               "url": "https://www.nadineseidu.info",
+              "image": "https://www.nadineseidu.info/img/1724333521397-og.jpg",
               "sameAs": [
                 "https://www.linkedin.com/in/nadine-seidu/",
                 "https://x.com/NadineSeidu"
