Run prettier for HTML files

--- a/index.html
+++ b/index.html
@@ -1,77 +1,89 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin und Expertin für eine urbane Erinnerungspraxis und Stadtgedächtnis.">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg">
-        <meta name="og:site_name" content="Nadine Seidu">
-        <title>Kulturwissenschaftlerin Nadine Seidu</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="icon" href="/favicon.ico">
-        <link rel="manifest" href="/site.webmanifest">
-        <link href="/index.css" rel="stylesheet">
-        <style>@font-face{font-display:swap;font-family:"Noto Serif Light";font-style:normal;font-weight:300;src:url(/fonts/noto-serif-v23-latin-300.woff2) format("woff2")}@font-face{font-display:swap;font-family:"Noto Serif Bold";font-style:normal;font-weight:700;src:url(/fonts/noto-serif-v23-latin-700.woff2) format("woff2")}</style>
-        <script type="application/ld+json">
-            {
-              "@context": "http://schema.org",
-              "@type": "Person",
-              "name": "Nadine Seidu",
-              "url": "https://www.nadineseidu.info",
-              "image": "https://www.nadineseidu.info/img/1724333521397-og.jpg",
-              "sameAs": [
-                "https://www.linkedin.com/in/nadine-seidu/",
-                "https://x.com/NadineSeidu"
-              ],
-              "jobTitle": "Kulturwissenschaftlerin"
-            }
-        </script>
-    </head>
-    <body>
-        <h1 class="sr-only">Kulturwissenschaftlerin Nadine Seidu</h1>
-        <main class="m-auto">
-            <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 mt-16 md:border">
-                <div class="p-10 md:pb-20 md:pl-20">
-                    <h2 class="font-bold text-5xl mb-4">Nadine Seidu</h2>
-                    <p class="mb-10 uppercase">Kulturwissenschaftlerin und Expertin für Erinnerungspraxis und Stadtgedächtnis</p>
-                    <strong class="font-bold">Schwerpunkte</strong>
-                    <p class="mb-4">Urbane Erinnerungspraxis und Stadtgedächtnis | Empowerment von Graswurzelinitiativen und Netzwerkarbeit | Entwicklung neuer Formen des Erinnerns | Kulturverwaltung, Museen und Archive</p>
-                    <strong class="font-bold">Biografische Stationen (Auswahl)</strong>
-                    <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Landeshauptstadt Stuttgart | Stellvertretende Leitung des Leitungsstabs, Landesarchiv Baden-Württemberg | Stabsstelle des Rektors, Universität Stuttgart | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
-                    <ul class="flex -mx-2.5">
-                        <li>
-                            <a class="inline-flex items-center justify-center w-14 h-14 p-2.5" aria-label="E-Mail schreiben" href="mailto:kontakt@nadineseidu.info">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-full" aria-hidden="true">
-                                    <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 14H4V8l8 5 8-5zm-8-7L4 6h16z"/>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="inline-flex items-center justify-center w-14 h-14 p-3" aria-label="Social Link zu LinkedIn" href="https://www.linkedin.com/in/nadine-seidu/" target="_blank">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 34 34" class="w-full" aria-hidden="true">
-                                    <path d="M34 2.5v29a2.5 2.5 0 0 1-2.5 2.5h-29A2.5 2.5 0 0 1 0 31.5v-29A2.5 2.5 0 0 1 2.5 0h29A2.5 2.5 0 0 1 34 2.5ZM10 13H5v16h5Zm.45-5.5a2.88 2.88 0 0 0-2.86-2.9H7.5a2.9 2.9 0 0 0 0 5.8 2.88 2.88 0 0 0 2.95-2.81ZM29 19.28c0-4.81-3.06-6.68-6.1-6.68a5.7 5.7 0 0 0-5.06 2.58h-.14V13H13v16h5v-8.51a3.32 3.32 0 0 1 3-3.58h.19c1.59 0 2.77 1 2.77 3.52V29h5Z"/>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="inline-flex items-center justify-center w-14 h-14 p-3" aria-label="Social Link zu X (Twitter)" href="https://x.com/NadineSeidu" target="_blank">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-full" aria-hidden="true">
-                                    <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="md:-mt-16 md:mr-16 flex justify-center md:justify-end">
-                    <picture>
-                        <source type="image/avif" srcset="/img/1724333521397-500w.avif 500w, /img/1724333521397-900w.avif 900w, /img/1724333521397-1300w.avif 1300w" sizes="(max-width: 767px) 100vw, 511px">
-                        <source type="image/webp" srcset="/img/1724333521397-500w.webp 500w, /img/1724333521397-900w.webp 900w, /img/1724333521397-1300w.webp 1300w" sizes="(max-width: 767px) 100vw, 511px">
-                        <img srcset="/img/1724333521397-500w.jpg 500w, /img/1724333521397-900w.jpg 900w" sizes="(max-width: 767px) 100vw, 511px" src="/img/1724333521397-1300w.jpg" width="1300" height="1950" alt="Nadine Seidu im Business-Outfit">
-                    </picture>
-                </div>
-            </div>
-        </main>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin und Expertin für eine urbane Erinnerungspraxis und Stadtgedächtnis." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg" />
+    <meta name="og:site_name" content="Nadine Seidu" />
+    <title>Kulturwissenschaftlerin Nadine Seidu</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link href="/index.css" rel="stylesheet" />
+    <style>
+      @font-face {
+        font-display: swap;
+        font-family: 'Noto Serif Light';
+        font-style: normal;
+        font-weight: 300;
+        src: url(/fonts/noto-serif-v23-latin-300.woff2) format('woff2');
+      }
+      @font-face {
+        font-display: swap;
+        font-family: 'Noto Serif Bold';
+        font-style: normal;
+        font-weight: 700;
+        src: url(/fonts/noto-serif-v23-latin-700.woff2) format('woff2');
+      }
+    </style>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Person",
+        "name": "Nadine Seidu",
+        "url": "https://www.nadineseidu.info",
+        "image": "https://www.nadineseidu.info/img/1724333521397-og.jpg",
+        "sameAs": ["https://www.linkedin.com/in/nadine-seidu/", "https://x.com/NadineSeidu"],
+        "jobTitle": "Kulturwissenschaftlerin"
+      }
+    </script>
+  </head>
+  <body>
+    <h1 class="sr-only">Kulturwissenschaftlerin Nadine Seidu</h1>
+    <main class="m-auto">
+      <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 mt-16 md:border">
+        <div class="p-10 md:pb-20 md:pl-20">
+          <h2 class="font-bold text-5xl mb-4">Nadine Seidu</h2>
+          <p class="mb-10 uppercase">Kulturwissenschaftlerin und Expertin für Erinnerungspraxis und Stadtgedächtnis</p>
+          <strong class="font-bold">Schwerpunkte</strong>
+          <p class="mb-4">Urbane Erinnerungspraxis und Stadtgedächtnis | Empowerment von Graswurzelinitiativen und Netzwerkarbeit | Entwicklung neuer Formen des Erinnerns | Kulturverwaltung, Museen und Archive</p>
+          <strong class="font-bold">Biografische Stationen (Auswahl)</strong>
+          <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Landeshauptstadt Stuttgart | Stellvertretende Leitung des Leitungsstabs, Landesarchiv Baden-Württemberg | Stabsstelle des Rektors, Universität Stuttgart | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
+          <ul class="flex -mx-2.5">
+            <li>
+              <a class="inline-flex items-center justify-center w-14 h-14 p-2.5" aria-label="E-Mail schreiben" href="mailto:kontakt@nadineseidu.info">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-full" aria-hidden="true">
+                  <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 14H4V8l8 5 8-5zm-8-7L4 6h16z" />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="inline-flex items-center justify-center w-14 h-14 p-3" aria-label="Social Link zu LinkedIn" href="https://www.linkedin.com/in/nadine-seidu/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 34 34" class="w-full" aria-hidden="true">
+                  <path d="M34 2.5v29a2.5 2.5 0 0 1-2.5 2.5h-29A2.5 2.5 0 0 1 0 31.5v-29A2.5 2.5 0 0 1 2.5 0h29A2.5 2.5 0 0 1 34 2.5ZM10 13H5v16h5Zm.45-5.5a2.88 2.88 0 0 0-2.86-2.9H7.5a2.9 2.9 0 0 0 0 5.8 2.88 2.88 0 0 0 2.95-2.81ZM29 19.28c0-4.81-3.06-6.68-6.1-6.68a5.7 5.7 0 0 0-5.06 2.58h-.14V13H13v16h5v-8.51a3.32 3.32 0 0 1 3-3.58h.19c1.59 0 2.77 1 2.77 3.52V29h5Z" />
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="inline-flex items-center justify-center w-14 h-14 p-3" aria-label="Social Link zu X (Twitter)" href="https://x.com/NadineSeidu" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-full" aria-hidden="true">
+                  <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="md:-mt-16 md:mr-16 flex justify-center md:justify-end">
+          <picture>
+            <source type="image/avif" srcset="/img/1724333521397-500w.avif 500w, /img/1724333521397-900w.avif 900w, /img/1724333521397-1300w.avif 1300w" sizes="(max-width: 767px) 100vw, 511px" />
+            <source type="image/webp" srcset="/img/1724333521397-500w.webp 500w, /img/1724333521397-900w.webp 900w, /img/1724333521397-1300w.webp 1300w" sizes="(max-width: 767px) 100vw, 511px" />
+            <img srcset="/img/1724333521397-500w.jpg 500w, /img/1724333521397-900w.jpg 900w" sizes="(max-width: 767px) 100vw, 511px" src="/img/1724333521397-1300w.jpg" width="1300" height="1950" alt="Nadine Seidu im Business-Outfit" />
+          </picture>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
