Adjust spacing & font size for mobile breakpoints

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   <body>
     <h1 class="sr-only">Kulturwissenschaftlerin Nadine Seidu</h1>
     <main class="m-auto">
-      <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 mt-16 md:border">
+      <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 md:mt-16 md:border">
         <div class="p-10 md:pb-20 md:pl-20">
-          <h2 class="font-bold text-5xl mb-4">Nadine Seidu</h2>
+          <h2 class="font-bold text-4xl md:text-5xl mb-4">Nadine Seidu</h2>
           <p class="mb-10 uppercase">Kulturwissenschaftlerin und Expertin für Erinnerungspraxis und Stadtgedächtnis</p>
           <strong class="font-bold">Schwerpunkte</strong>
           <p class="mb-4">Urbane Erinnerungspraxis und Stadtgedächtnis | Empowerment von Graswurzelinitiativen und Netzwerkarbeit | Entwicklung neuer Formen des Erinnerns | Kulturverwaltung, Museen und Archive</p>
