Edited two words

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin und Expertin für eine urbane Erinnerungspraxis und Stadtgedächtnis." />
+    <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin mit den Schwerpunkten urbane Erinnerungspraxis und Stadtgedächtnis." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg" />
     <meta name="og:site_name" content="Nadine Seidu" />
@@ -47,11 +47,11 @@
       <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 md:mt-16 md:border">
         <div class="p-10 md:pb-20 md:pl-20">
           <h2 class="font-bold text-4xl md:text-5xl mb-4">Nadine Seidu</h2>
-          <p class="mb-10 uppercase">Kulturwissenschaftlerin und Expertin für Erinnerungspraxis und Stadtgedächtnis</p>
+          <p class="mb-10 uppercase">Kulturwissenschaftlerin mit den Schwerpunkten Erinnerungspraxis und Stadtgedächtnis</p>
           <strong class="font-bold">Schwerpunkte</strong>
           <p class="mb-4">Urbane Erinnerungspraxis und Stadtgedächtnis | Empowerment von Graswurzelinitiativen und Netzwerkarbeit | Entwicklung neuer Formen des Erinnerns | Kulturverwaltung, Museen und Archive</p>
           <strong class="font-bold">Biografische Stationen (Auswahl)</strong>
-          <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Landeshauptstadt Stuttgart | Stellvertretende Leitung des Leitungsstabs, Landesarchiv Baden-Württemberg | Stabsstelle des Rektors, Universität Stuttgart | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
+          <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Landeshauptstadt Stuttgart | Leitungsstab, Landesarchiv Baden-Württemberg | Stabsstelle des Rektors, Universität Stuttgart | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
           <ul class="flex -mx-2.5">
             <li>
               <a class="inline-flex items-center justify-center w-14 h-14 p-2.5" aria-label="E-Mail schreiben" href="mailto:kontakt@nadineseidu.info">
