--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin mit den Schwerpunkten Strategie- und Konzeptentwicklung sowie Projektleitung." />
+    <meta name="description" content="Nadine Seidu ist Kulturwissenschaftlerin" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg" />
     <meta name="og:site_name" content="Nadine Seidu" />
@@ -47,7 +47,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 md:mt-16 md:border">
         <div class="p-10 md:pb-20 md:pl-20">
           <h2 class="font-bold text-4xl md:text-5xl mb-4">Nadine Seidu</h2>
-          <p class="mb-10 uppercase">Kulturwissenschaftlerin mit den Schwerpunkten Strategie- und Konzeptentwicklung sowie Projektleitung</p>
+          <p class="mb-10 uppercase"
           <strong class="font-bold">Schwerpunkte</strong>
           <p class="mb-4">Konzept- und Strategieentwicklung | Projektleitung | Personalführung | Netzwerkaufbau | Fördermittelvergabe | Kulturverwaltungen, Universitäten, Museen und Archive</p>
           <strong class="font-bold">Biografische Stationen (Auswahl)</strong>
