--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Auf dieser Webseite finden Sie Informationen zu Nadine Seidu, ihren Erfahrungen und beruflichen Schwerpunkten" />
+    <meta name="description" content="Auf dieser Webseite finden Sie Informationen zu Nadine Seidu, ihrem beruflichen Werdegang und Schwerpunkten" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg" />
     <meta name="og:site_name" content="Nadine Seidu" />
