--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg" />
     <meta name="og:site_name" content="Nadine Seidu" />
-    <title>Kulturwissenschaftlerin Nadine Seidu</title>
+    <title>Nadine Seidu</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -42,7 +42,7 @@
     </script>
   </head>
   <body>
-    <h1 class="sr-only">Kulturwissenschaftlerin Nadine Seidu</h1>
+    <h1 class="sr-only">Nadine Seidu</h1>
     <main class="m-auto">
       <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 md:mt-16 md:border">
         <div class="p-10 md:pb-20 md:pl-20">
