--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         "name": "Nadine Seidu",
         "url": "https://www.nadineseidu.info",
         "image": "https://www.nadineseidu.info/img/1724333521397-og.jpg",
-        "sameAs": ["https://www.linkedin.com/in/nadine-seidu/", "https://x.com/NadineSeidu"],
+        "sameAs": ["https://www.linkedin.com/in/nadine-seidu/", "https://bsky.app/profile/nadineseidu.bsky.social"],
         "jobTitle": "Kulturwissenschaftlerin"
       }
     </script>
@@ -68,9 +68,9 @@
               </a>
             </li>
             <li>
-              <a class="inline-flex items-center justify-center w-14 h-14 p-3" aria-label="Social Link zu X (Twitter)" href="https://x.com/NadineSeidu" target="_blank">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-full" aria-hidden="true">
-                  <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
+              <a class="inline-flex items-center justify-center w-14 h-14 p-3" aria-label="Social Link zu Bluesky" href="https://bsky.app/profile/nadineseidu.bsky.social" target="_blank">
+                <svg viewBox="0 0 64 57" style="width:32px;height:28.5px">
+                  <path d="M13.873 3.805C21.21 9.332 29.103 20.537 32 26.55v15.882c0-.338-.13.044-.41.867-1.512 4.456-7.418 21.847-20.923 7.944-7.111-7.32-3.819-14.64 9.125-16.85-7.405 1.264-15.73-.825-18.014-9.015C1.12 23.022 0 8.51 0 6.55 0-3.268 8.579-.182 13.873 3.805Zm36.254 0C42.79 9.332 34.897 20.537 32 26.55v15.882c0-.338.13.044.41.867 1.512 4.456 7.418 21.847 20.923 7.944 7.111-7.32 3.819-14.64-9.125-16.85 7.405 1.264 15.73-.825 18.014-9.015C62.88 23.022 64 8.51 64 6.55c0-9.818-8.578-6.732-13.873-2.745Z"/>
                 </svg>
               </a>
             </li>
