--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h2 class="font-bold text-4xl md:text-5xl mb-4">Nadine Seidu</h2>
           <p class="mb-10 uppercase"></p>
           <strong class="font-bold">Schwerpunkte</strong>
-          <p class="mb-4">Konzept- und Strategieentwicklung | Projektleitung | Personalführung | Netzwerkaufbau | Fördermittelvergabe | Gremienarbeit | Kulturverwaltungen, Universitäten, Museen und Archive</p>
+          <p class="mb-4">Personalführung | Konzept- und Strategieentwicklung | Netzwerkaufbau | Fördermittelvergabe | Gremienarbeit | Projektleitung | Kulturverwaltungen, Universitäten, Museen und Archive</p>
           <strong class="font-bold">Biografische Stationen (Auswahl)</strong>
           <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Kulturamt der Landeshauptstadt Stuttgart | Leitungsstab, Landesarchiv Baden-Württemberg | Stabsstelle des Rektors, Universität Stuttgart | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
           <ul class="flex -mx-2.5">
