--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Hallo, mein Name ist Nadine Seidu! Auf dieser Webseite erhalten Sie einen Einblick über die letzten 15 Jahre meines beruflichen Werdegangs und meine Erfahrungen." />
+    <meta name="description" content="Hallo, mein Name ist Nadine Seidu! Ich bin Kulturwissenschaftlerin und Führungskraft mit fast 15 Jahre Erfahrung in Kulturverwaltung, Archiv, Museum und Wissenschaft." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg" />
     <meta name="og:site_name" content="Nadine Seidu" />
@@ -47,9 +47,9 @@
       <div class="grid grid-cols-1 md:grid-cols-2 mx-auto w-3xl md:max-w-6xl text-gray-700 md:mt-16 md:border">
         <div class="p-10 md:pb-20 md:pl-20">
           <h2 class="font-bold text-4xl md:text-5xl mb-4">Nadine Seidu</h2>
-          <p class="mb-10 uppercase"></p>
+          <p class="mb-4">Kulturwissenschaftlerin und Leiterin der Koordinierungsstelle Erinnerungskultur im Kulturamt der Landeshauptstadt Stuttgart. Fast 15 Jahre Erfahrung in Kulturverwaltung, Archiv, Museum und Wissenschaft</p>
           <strong class="font-bold">Schwerpunkte</strong>
-          <p class="mb-4">Personalführung | Konzept- und Strategieentwicklung | Netzwerkaufbau | Fördermittelvergabe | Gremienarbeit | Projektleitung | Kulturverwaltungen, Universitäten, Museen und Archive</p>
+          <p class="mb-4">Personalführung | Konzept- und Strategieentwicklung | Netzwerkaufbau | Fördermittelvergabe | Gremienarbeit | Projektleitung</p>
           <strong class="font-bold">Biografische Stationen (Auswahl)</strong>
           <p class="mb-4">Seit 2021: Leitung der Koordinierungsstelle Erinnerungskultur, Kulturamt der Landeshauptstadt Stuttgart | Leitungsstab, Landesarchiv Baden-Württemberg | Stabsstelle des Rektors, Universität Stuttgart | Ausgebildete Museumskuratorin, Historisches Museum der Pfalz | Studierte Kulturwissenschaftlerin, Johannes Gutenberg-Universität Mainz</p>
           <ul class="flex -mx-2.5">
