--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Hallo, mein Name ist Nadine Seidu! Ich bin Kulturwissenschaftlerin und Führungskraft mit fast 15 Jahre Erfahrung in Kulturverwaltung, Archiv, Museum und Wissenschaft." />
+    <meta name="description" content="Hallo, mein Name ist Nadine Seidu! Ich bin Kulturwissenschaftlerin und Führungskraft mit fast 15 Jahren Erfahrung in Kulturverwaltung, Archiv, Museum und Wissenschaft." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="https://www.nadineseidu.info/img/1724333521397-og.jpg" />
     <meta name="og:site_name" content="Nadine Seidu" />
